fix: enable @/* path alias for Next.js/TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,14 @@
     "incremental": true,
     "types": [
       "node"
-    ]
+    ],
+    // 👇ここを追加
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "next-env.d.ts",
