--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "@supabase/supabase-js": "^2.45.0",
-    "zod": "^3.23.8",
-    "date-fns": "^3.6.0"
+    "uikit": "^3.23.12",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
     "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3"
+    "@types/react": "^18.3.3",
+    "typescript": "^5.5.4"
   }
 }
